--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.34.1",
     "firebase": "^10.14.1",
+    "framer-motion": "^11.11.10",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
@@ -32,7 +33,7 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-youtube": "^10.1.0",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid4": "^2.0.3"
   },
